# society-of-thought-bench

./: .gitignore  README.md  pyproject.toml
release_preview/: FINDINGS.md  GITHUB_ANNOUNCEMENT.md  HF_ANNOUNCEMENT.md  HF_MODEL_CARD.md  LIMITATIONS.md  MODEL_OVERVIEW.md  RAW_SAMPLE.md  RESULTS.md  v0.1.0-preview.md
scripts/: analyze_trace_failures.py  build_release_hardening_packet.py  build_tinker_disagreement_gold_dataset.py  build_tinker_disagreement_repair_dataset.py  build_tinker_dpo_dataset.py  build_tinker_external_dpo_dataset.py  build_tinker_external_sft_dataset.py  build_tinker_warmup_dataset.py  chat_tinker_checkpoint.py  compare_tinker_external_suite.py  eval_tinker_checkpoint.py  eval_tinker_disagreement_gold.py  eval_tinker_external_suite.py  inspect_example.py  monologue_baseline.py  publish_hf_adapter.py  publish_hf_space_demo.py  run_tinker_dpo.py  run_tinker_sft.py  run_tinker_verifiers_rl.py  run_trace_prompt_sweep.py  try_tinker_checkpoint.py
society_of_thought_bench/: __init__.py  checkpoint_chat.py  core.py  diagnostics.py  environment.py  external_benchmarks.py  families.py  parser.py  release_hardening.py  scoring.py  tinker_renderers.py  training_data.py
space_demo/: README.md  app.py  core.py  requirements.txt
tests/: test_chat_tinker_checkpoint.py  test_countdown.py  test_diagnostics.py  test_disagreement_gold_dataset.py  test_evidence.py  test_external_benchmarks.py  test_external_training_pipeline.py  test_families.py  test_load_environment.py  test_parser.py  test_release_hardening.py  test_reward.py  test_training_data.py  (+2 more)
(+27 files in other folders)
